--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "scoops-builder",
-  "version": "0.1.0",
-  "private": true,
+  "homepage": "https://scoops-builder.vercel.app/",
+  "version": "1.0.1",
+  "private": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -11,18 +12,18 @@
   "dependencies": {
     "@react-three/drei": "^10.3.0",
     "@react-three/fiber": "^9.1.2",
-    "bootstrap": "^5.3.6",
+    "bootstrap": "^5.3.8",
     "date-fns": "^4.1.0",
-    "next": "^15.5.2",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "next": "^16",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-hotkeys-hook": "^4.6.1",
     "sass": "^1.92.1",
     "three": "^0.174.0",
-    "zustand": "^5.0.5"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "eslint": "9.35.0",
-    "eslint-config-next": "15.5.2"
+    "eslint": "^9",
+    "eslint-config-next": "^16"
   }
 }
