--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.1",
   "private": false,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,8 +15,8 @@
     "bootstrap": "^5.3.8",
     "date-fns": "^4.1.0",
     "next": "^16",
-    "react": "^19.2.1",
-    "react-dom": "^19.2.1",
+    "react": "^19",
+    "react-dom": "^19",
     "react-hotkeys-hook": "^4.6.1",
     "sass": "^1.92.1",
     "three": "^0.174.0",
